--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
             <h1>Hi!</h1>
             <p>Welcome to <span th:text="${appName}"></span></p>
             <p>This is a test change.</p>
+			<p>This is 2nd change.</p>
         </div>
     </body>
 </html>
